syntax = "proto2";

option java_package = "maps.org.usfirst.frc.team449.robot.components";
option java_outer_classname = "RotPerSecCANTalonSRXMap";

message RotPerSecCANTalonSRX {
	required int32 port = 1;

	// Feedback Device represents CTRE's {@link CANTalon.FeedbackDevice}
	enum FeedbackDevice {
		QuadEncoder = 0;
		AnalogPot = 2;
		AnalogEncoder = 3;
		EncRising = 4;
		EncFalling = 5;
		CtreMagEncoder_Relative = 6;
		CtreMagEncoder_Absolute = 7;
		PulseWidth = 8;
	}

	required FeedbackDevice feedback_device = 2;
	required bool reverse_sensor = 3;
	required bool reverse_output = 4;
	required bool is_inverted = 5;
	required double nominal_out_voltage = 6;
	required double peak_out_voltage = 7;
	required int32 profile = 8;
	optional double kP_mp = 9;
	optional double kI_mp = 10;
	optional double kD_mp = 11;
	optional double kP_lg = 24;
	optional double kI_lg = 25;
	optional double kD_lg = 26;
	required double kP_hg = 27;
	required double kI_hg = 28;
	required double kD_hg = 29;
	optional double max_speed_lg = 22;
	required double max_speed_hg = 30;
	required bool fwd_lim_norm_open = 13;
	required bool rev_lim_norm_open = 14;
	required bool fwd_lim_enabled = 15;
	required bool rev_lim_enabled = 16;
	required bool fwd_soft_lim_enabled = 17;
	required double fwd_soft_lim_val = 18;
	required bool rev_soft_lim_enabled = 19;
	required double rev_soft_lim_val = 20;
	required bool brake_mode = 21;
	required int32 encoder_CPR = 23;
}